# beeping-raspberry-pi

./: CMakeLists.txt  README.md  Toolchain-RaspberryPi.cmake  build.sh  cmake.sh
src/: BeepSDk.cpp
